Solución de 2019/2/MAT1620/2

--- a/2019/2/MAT1620/2/solucion.tex
+++ b/2019/2/MAT1620/2/solucion.tex
@@ -174,7 +174,7 @@ $$n = k \ra a_k \leq 3$$
 Tésis de inducción:
 $$n = k+1$$
 Por demostrar que $a_{n+1} \leq 3$
-$$\a_k \leq 3$$
+$$a_k \leq 3$$
 $$\dfrac{1}{a_k} \geq \dfrac{1}{3}$$
 $$-\dfrac{1}{a_k} \leq -\dfrac{1}{3}$$
 $$3-\dfrac{1}{a_k} \leq 3-\dfrac{1}{3}$$
