Solución de 2019/2/MAT1620/2

--- a/2019/2/MAT1620/2/solucion.tex
+++ b/2019/2/MAT1620/2/solucion.tex
@@ -133,8 +133,18 @@
 			\\
 			$$\lim\limits_{n\ra \infty} a_n = \lim\limits_{n\ra \infty} \dfrac{n^3-n}{7n^3+6} \stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{3n^2-1}{21n^2}
 			\stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{6n}{42n} = \dfrac{1}{7}$$
-\item 
-\item 
+\item $a_n = \dfrac{(-1)^n n}{n^3+4}$\\
+\\
+$$\lim\limits_{n\ra \infty} a_n 
+= \lim\limits_{n\ra \infty} \dfrac{(-1)^n n}{n^3+4}
+= \lim\limits_{n\ra \infty} (-1)^n \dfrac{n}{n^3+4}
+= 0$$
+\item $a_n=\ln(n+1)-\ln(n)$\\
+\\
+$$\lim\limits_{n\ra \infty} a_n 
+= \lim\limits_{n\ra \infty} \ln(n+1)-\ln(n)
+= \lim\limits_{n\ra \infty} \ln\left({\dfrac{n+1}{n}}\right)
+= \ln(1) = 0$$
 \end{enumerate}
 \end{solucion}
 \item Determine si las siguientes sucesiones convergen y en caso de hacerlo, calcular su límite.
