Enunciado de 2018/1/MAT220E/8

--- a/2018/1/MAT220E/8/enunciado.tex
+++ b/2018/1/MAT220E/8/enunciado.tex
@@ -115,5 +115,20 @@
 \end{center}
 
 \begin{preguntas}
+\item Determine si las siguientes series convergen o divergen.
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=1}^{\infty}\dfrac{n}{n^4+1}$
+\item $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
+\item $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
+\end{enumerate}
+\item Considere una función $f$ continua en $\R$, decreciente y no negativa tal que
+	$$\lim_{x\ra\infty}\dfrac{f(x)}{e^{-x}}=5$$
+	Analice la convergencia de la serie $\sum\limits_{n=1}^{\infty}f(n)$
+\item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
+\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
+\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
+\end{enumerate}
 \end{preguntas}
 \end{document}
