Enunciado de 2019/2/MAT1620/3

--- a/2019/2/MAT1620/3/enunciado.tex
+++ b/2019/2/MAT1620/3/enunciado.tex
@@ -115,5 +115,29 @@
 \end{center}
 
 \begin{preguntas}
+\item Determine si las siguientes series convergen o divergen.
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{5n^3}{7n+n^3-1}$
+\task $\sum\limits_{n=1}^{\infty}\left(sen\left(\dfrac{n\pi}{2}\right)\right)^2$
+\task $\sum\limits_{n=1}^{\infty}2^{2n}3^{1-n}$
+\task $\sum\limits_{n=1}^{\infty}\dfrac{1}{n^4}$
+\task $\sum\limits_{n=20}^{\infty}\dfrac{1}{nln(n)ln(ln(n))}$
+\task $\sum\limits_{n=1}^{\infty}ln\left(1+\dfrac{1}{n}\right)$
+\end{tasks}
+\item Determine si las siguientes series convergen o divergen.
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=1}^{\infty}\dfrac{n}{n^4+1}$
+\item $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
+\item $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
+\end{enumerate}
+\item Considere una función $f$ continua en $\R$, decreciente y no negativa tal que
+	$$\lim_{x\ra\infty}\dfrac{f(x)}{e^{-x}}=5$$
+	Analice la convergencia de la serie $\sum\limits_{n=1}^{\infty}f(n)$
+\item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
+\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
+\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
+\end{enumerate}
 \end{preguntas}
 \end{document}
