Solución de 2019/2/MAT1620/3

--- a/2019/2/MAT1620/3/solucion.tex
+++ b/2019/2/MAT1620/3/solucion.tex
@@ -290,5 +290,14 @@ Sabemos que
 			Por la prueba de la divergencia, la serie es divergente.
 \end{enumerate}
 \end{solucion}
+\item Sea $a_n$ una sucesión tal que $a_n \neq 0,\ \forall n \in \N$.\\
+	Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ converge, entonces $\sum\limits_{n=1}^{\infty}\dfrac{1}{a_n}$ diverge.
+\begin{solucion}
+
+\end{solucion}
+\item Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ es convergente, entonces el limite de la sucesión $b_n=ln(1+a_n)$ en el infinito es $0$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
