--- a/2019/2/MAT1620/3/enunciado.tex
+++ b/2019/2/MAT1620/3/enunciado.tex
@@ -125,22 +125,22 @@
 \task $\sum\limits_{n=1}^{\infty}ln\left(1+\dfrac{1}{n}\right)$
 \end{tasks}
 \item Determine si las siguientes series convergen o divergen.
-\begin{enumerate}[a)]
-\item $\sum\limits_{n=1}^{\infty}\dfrac{n}{n^4+1}$
-\item $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
-\item $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
-\end{enumerate}
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{n}{n^4+1}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
+\task $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
+\end{tasks}
 \item Considere una función $f$ continua en $\R$, decreciente y no negativa tal que
 	$$\lim_{x\ra\infty}\dfrac{f(x)}{e^{-x}}=5$$
 	Analice la convergencia de la serie $\sum\limits_{n=1}^{\infty}f(n)$
-\item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
-\begin{enumerate}[a)]
-\item $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
-\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
-\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
-\end{enumerate}
+\item Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ es convergente, entonces el limite de la sucesión $b_n=ln(1+a_n)$ en el infinito es $0$.
 \item Sea $a_n$ una sucesión tal que $a_n \neq 0,\ \forall n \in \N$.\\
 	Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ converge, entonces $\sum\limits_{n=1}^{\infty}\dfrac{1}{a_n}$ diverge.
-\item Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ es convergente, entonces el limite de la sucesión $b_n=ln(1+a_n)$ en el infinito es $0$.
+\item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
+\end{tasks}
 \end{preguntas}
 \end{document}
