Solución de 2019/2/MAT1620/3

--- a/2019/2/MAT1620/3/solucion.tex
+++ b/2019/2/MAT1620/3/solucion.tex
@@ -175,11 +175,11 @@
 \end{enumerate}
 \end{solucion}
 \item Determine si las siguientes series convergen o divergen.
-\begin{enumerate}[a)]
-\item $\sum\limits_{n=1}^{\infty}\dfrac{n}{n^4+1}$
-\item $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
-\item $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
-\end{enumerate}
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{n}{n^4+1}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
+\task $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
+\end{tasks}
 \begin{solucion}
 
 \begin{enumerate}[a)]
@@ -250,12 +250,21 @@ Sabemos que
 		= e^{-1} < 1$$
 		Por lo tanto, es convergente. De la misma forma, la serie $\sum\limits_{n=1}^{\infty}f(n)$ también lo es.
 \end{solucion}
+\item Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ es convergente, entonces el limite de la sucesión $b_n=ln(1+a_n)$ en el infinito es $0$.
+\begin{solucion}
+
+\end{solucion}
+\item Sea $a_n$ una sucesión tal que $a_n \neq 0,\ \forall n \in \N$.\\
+	Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ converge, entonces $\sum\limits_{n=1}^{\infty}\dfrac{1}{a_n}$ diverge.
+\begin{solucion}
+
+\end{solucion}
 \item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
-\begin{enumerate}[a)]
-\item $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
-\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
-\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
-\end{enumerate}
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
+\end{tasks}
 \begin{solucion}
 
 \begin{enumerate}[a)]
@@ -289,15 +298,6 @@ Sabemos que
 			$$\lim_{n\ra\infty} |a_n| = \lim_{n\ra\infty}\dfrac{(n+1)}{n} = 1 \neq 0$$
 			Por la prueba de la divergencia, la serie es divergente.
 \end{enumerate}
-\end{solucion}
-\item Sea $a_n$ una sucesión tal que $a_n \neq 0,\ \forall n \in \N$.\\
-	Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ converge, entonces $\sum\limits_{n=1}^{\infty}\dfrac{1}{a_n}$ diverge.
-\begin{solucion}
-
-\end{solucion}
-\item Demuestre que si $\sum\limits_{n=1}^{\infty}a_n$ es convergente, entonces el limite de la sucesión $b_n=ln(1+a_n)$ en el infinito es $0$.
-\begin{solucion}
-
 \end{solucion}
 \end{preguntas}
 \end{document}
