Enunciado de 2019/2/MAT162/4

--- a/2019/2/MAT162/4/enunciado.tex
+++ b/2019/2/MAT162/4/enunciado.tex
@@ -58,7 +58,7 @@
 
 \newcommand{\ayudantia}{{\sc Ayudantía 4}}
 \newcommand{\tituloayu}{Series II}
-\newcommand{\fecha}{27 de agosto de 2019}
+\newcommand{\fecha}{3 de septiembre de 2019}
 \newcommand{\sigla}{MAT210E}
 \newcommand{\nombre}{Cálculo I}
 \newcommand{\profesor}{Claudio Fernandez}
