Enunciado de 2019/2/MAT162/4

--- a/2019/2/MAT162/4/enunciado.tex
+++ b/2019/2/MAT162/4/enunciado.tex
@@ -115,5 +115,20 @@
 \end{center}
 
 \begin{preguntas}
+\item Determine si las siguientes series convergen o divergen.
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{n}{n^4+1}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{n}{(n+1)^2ln(n)}$
+\task $\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$
+\end{tasks}
+\item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
+\end{tasks}
+\item Considere una función $f$ continua en $\R$, decreciente y no negativa tal que
+	$$\lim_{x\ra\infty}\dfrac{f(x)}{e^{-x}}=5$$
+	Analice la convergencia de la serie $\sum\limits_{n=1}^{\infty}f(n)$
 \end{preguntas}
 \end{document}
