Enunciado de 2019/2/MAT1620/3

--- a/2019/2/MAT1620/3/enunciado.tex
+++ b/2019/2/MAT1620/3/enunciado.tex
@@ -119,8 +119,8 @@
 \begin{tasks}(3)
 \task $\sum\limits_{n=1}^{\infty}\dfrac{5n^3}{7n+n^3-1}$
 \task $\sum\limits_{n=1}^{\infty}\left(sen\left(\dfrac{n\pi}{2}\right)\right)^2$
-\task $\sum\limits_{n=1}^{\infty}2^{2n}3^{1-n}$
-\task $\sum\limits_{n=1}^{\infty}\dfrac{1}{n^4}$
+\task $\sum\limits_{n=1}^{\infty}2^{2n}3^{1-3n}$
+\task $\sum\limits_{n=1}^{\infty}\dfrac{1 + n + \sin(n)}{3n^4 + \ln(n)}$
 \task $\sum\limits_{n=20}^{\infty}\dfrac{1}{nln(n)ln(ln(n))}$
 \task $\sum\limits_{n=1}^{\infty}ln\left(1+\dfrac{1}{n}\right)$
 \end{tasks}
