--- a/2019/2/MAT1620/3/solucion.tex
+++ b/2019/2/MAT1620/3/solucion.tex
@@ -119,8 +119,8 @@
 \begin{tasks}(3)
 \task $\sum\limits_{n=1}^{\infty}\dfrac{5n^3}{7n+n^3-1}$
 \task $\sum\limits_{n=1}^{\infty}\left(sen\left(\dfrac{n\pi}{2}\right)\right)^2$
-\task $\sum\limits_{n=1}^{\infty}2^{2n}3^{1-n}$
-\task $\sum\limits_{n=1}^{\infty}\dfrac{1}{n^4}$
+\task $\sum\limits_{n=1}^{\infty}2^{2n}3^{1-3n}$
+\task $\sum\limits_{n=1}^{\infty}\dfrac{1 + n + \sin(n)}{3n^4 + \ln(n)}$
 \task $\sum\limits_{n=20}^{\infty}\dfrac{1}{nln(n)ln(ln(n))}$
 \task $\sum\limits_{n=1}^{\infty}ln\left(1+\dfrac{1}{n}\right)$
 \end{tasks}
@@ -137,15 +137,15 @@
 			Veamos el límite de la sucesión
 			$$\lim\limits_{n\ra \infty} \left(sen\left(\dfrac{n\pi}{2}\right)\right)^2 \ra alternante \neq 0$$
 			Por la prueba de la divergencia, la serie diverge.
-\item $\sum\limits_{n=1}^{\infty}2^{2n}3^{1-n}$\\
+\item $\sum\limits_{n=1}^{\infty}2^{2n}3^{1-3n}$\\
 			\\
 			Notemos que esta es una serie geométrica, por lo que debemos escribirla de la forma $\sum\limits_1^{\infty} Ar^n$ para saber como se comporta.
-			$$\sum\limits_{n=1}^{\infty}2^{2n}3^{1-n}
-			= \sum\limits_{n=1}^{\infty}2^{2n}\left(\dfrac{1}{3}\right)^{n-1}
-			= \sum\limits_{n=1}^{\infty}2^{2n}3\left(\dfrac{1}{3}\right)^n
-			= \sum\limits_{n=1}^{\infty}4^{n}3\left(\dfrac{1}{3}\right)^n
-			= \sum\limits_{n=1}^{\infty}3\left(\dfrac{4}{3}\right)^n$$
-			Como $r = \dfrac{4}{3} \geq 1$, la serie diverge.
+$$\sum\limits_{n=1}^{\infty}2^{2n}3^{1-3n} 
+= \sum\limits_{n=1}^{\infty}2^{2n} \dfrac{3}{3^{3n}}
+= \sum\limits_{n=1}^{\infty}(2^2)^n \dfrac{3}{(3^3)^n}
+= \sum\limits_{n=1}^{\infty}4^n \dfrac{3}{27^n}
+= \sum\limits_{n=1}^{\infty} 3 \left(\dfrac{4}{27}\right)^n$$
+			Como $r = \dfrac{4}{27} <1$, la serie converge.
 \item $\sum\limits_{n=1}^{\infty}\dfrac{1}{n^4}$\\
 			\\
 			Notemos que esta es una $serie-p$ con $p=4>1$, por lo que la serie es convergente.
