Solución de 2019/2/MAT1620/1

--- a/2019/2/MAT1620/1/solucion.tex
+++ b/2019/2/MAT1620/1/solucion.tex
@@ -180,7 +180,7 @@ En primer lugar,
 			Luego, usando $g(x) = \dfrac{1}{x}$, se cumple que
 $$\lim\limits_{x \ra \infty} \dfrac{\dfrac{\sqrt[]{1+\frac{1}{x^4}}}{x}}{\dfrac{1}{x}} = 
 \dfrac{\dfrac{1}{x}}{\dfrac{1}{x}} = 1 \neq 0$$
-Por criterio de comparación al límite, $\displaystyle\int_{1}^{\infty} \dfrac{\sqrt[]{1+\frac{1}{x^4}}}{x}dx$ se comportará igual a $\displaystyle\int_{1}^{\infty} \dfrac{1}{x}dx$. Notemos que esta última converge por criterio-p, ya que $p=1$.
+Por criterio de comparación al límite, $\displaystyle\int_{1}^{\infty} \dfrac{\sqrt[]{1+\frac{1}{x^4}}}{x}dx$ se comportará igual a $\displaystyle\int_{1}^{\infty} \dfrac{1}{x}dx$. Notemos que esta última diverge por criterio-p, ya que $p=1$.
 			Finalmente,
 			$$S = \infty$$
 \item Calcular el volumen de la trompeta entre $1$ y $L$ con la siguiente formula:
