Solución de 2019/2/MAT1620/1

--- a/2019/2/MAT1620/1/solucion.tex
+++ b/2019/2/MAT1620/1/solucion.tex
@@ -175,7 +175,7 @@ En primer lugar,
 			= 2\pi \displaystyle\int_{1}^{\infty} \dfrac{\sqrt[]{1+\frac{1}{x^4}}}{x}dx$$
 			Notemos que
 			$$\lim\limits_{x \ra \infty} \dfrac{\sqrt[]{1+\frac{1}{x^4}}}{x} = 
-\lim\limits_{x \ra \infty} \dfrac{\sqrt[]{1+\cancelto{\frac{1}{x^4}}{0}}}{x} = 
+\lim\limits_{x \ra \infty} \dfrac{\sqrt[]{1+\cancelto{0}{\frac{1}{x^4}}}}{x} = 
 \lim\limits_{x \ra \infty} \dfrac{1}{x} = 0$$
 			Luego, usando $g(x) = \dfrac{1}{x}$, se cumple que
 $$\lim\limits_{x \ra \infty} \dfrac{\dfrac{\sqrt[]{1+\frac{1}{x^4}}}{x}}{\dfrac{1}{x}} = 
