foto mapa series

--- a/2019/2/MAT1620/3/solucion.tex
+++ b/2019/2/MAT1620/3/solucion.tex
@@ -125,7 +125,9 @@
 \task $\sum\limits_{n=1}^{\infty}ln\left(1+\dfrac{1}{n}\right)$
 \end{tasks}
 \begin{solucion}
-
+\begin{center}
+\includegraphics[width=8cm]{../../../../img/mapa_series}
+\end{center}
 \begin{enumerate}[a)]
 \item $\sum\limits_{n=1}^{\infty}\dfrac{5n^3}{7n+n^3-1}$\\
 			\\
