--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -115,5 +115,85 @@
 \end{center}
 
 \begin{preguntas}
+\item Realiza las siguientes operaciones con los vectores dados
+	$$
+	v_1 = \begin{pmatrix}
+	1\\
+	7\\
+	8
+\end{pmatrix};\qquad
+	v_2 = \begin{pmatrix}
+	-4\\
+	2\\
+	-3
+\end{pmatrix}; \qquad
+	v_3 = \begin{pmatrix}
+	0\\
+	1\\
+	3
+\end{pmatrix}; \qquad
+	v_4 = \begin{pmatrix}
+	13\\
+	-3\\
+	1
+\end{pmatrix},
+	 $$
+\begin{tasks}(4)
+\task $v_1 + v_2$
+\task $v_3 - v_4$
+\task $v_2 \cdot v_3$
+\task $v_1 \times v_2$
+\task $v_2 \times v_1$
+\task $(v_1 \times v_2) \cdot v_2$
+\task $3 - ((2v_1) \cdot v_2)$
+\task $v_2 - v_3 \times v_1$
+\end{tasks}
+\item Verificar si los siguientes puntos son o no colineares entre si
+\begin{tasks}(2)
+\task $P(3,2,5), \ P(0, 1/2, -1), \ P(5, 3, 9)$
+\task $P(1,1,4), \ P(-2,-3.-8), \ P(4,4,16)$
+\end{tasks}
+\item Sean los vectores
+		$$
+	v_1 = \begin{pmatrix}
+	2\\
+	1\\
+	5
+\end{pmatrix};\qquad
+	v_2 = \begin{pmatrix}
+	-1\\
+	-3\\
+	0
+\end{pmatrix}$$
+\begin{enumerate}[a)]
+\item Buscar un vector $v_3$ que sea perpendicular a $v_1$ y $v_2$ y verificar que efectivamente sea perpendicular a ambos.
+\item Buscar un vector paralelo a $(v_2-v_3)$ y verificar que lo sea
+\item Encontrar un vector perpendicular a $(v_3 + 3v_1)$
+\end{enumerate}
+\item Detereminar si los siguientes vectores son paralelos, perpendiculares u oblicuos
+\begin{tasks}(2)
+\task $$ 
+			\begin{pmatrix}
+			-1\\
+			2\\
+			5
+		\end{pmatrix};\qquad
+			\begin{pmatrix}
+			2\\
+			-4\\
+			-10
+		\end{pmatrix}$$
+\task  $$ 
+			\begin{pmatrix}
+			2\\
+			5\\
+			10
+		\end{pmatrix};\qquad
+			\begin{pmatrix}
+			-3\\
+			8\\
+			-11
+		\end{pmatrix}$$
+\end{tasks}
 \end{preguntas}
 \end{document}
