--- a/2019/1/MAT1203/15/solucion.tex
+++ b/2019/1/MAT1203/15/solucion.tex
@@ -565,5 +565,191 @@
 			Como este no es el vector nulo, tampoco son paralelos. Con esto concluimos que ambos vectores son oblicuos.
 \end{enumerate}
 \end{solucion}
+\item Determinar el plano que pasa por los puntos $P_1(4,-1,-2)$, $P_2(0,0,1)$ y $P_3(2,-3,0)$.
+\begin{solucion}
+Sabemos que un plano se define de la forma
+		$$Ax +By + Cz = D$$
+		Reemplazando esto con los tres puntos que tenemos, obtendremos el siguiente sistema de ecuaciones
+		$$
+		\begin{array}{rcrr}
+		4A-B-2C & = & D& \vline\\
+		C & = & D & \vline\\
+		2A-3B & = & D &\vline\\
+		\hline
+		\end{array}
+		$$
+		$$
+		\begin{array}{rcrr}
+		4A-B-2C & = & C& \vline\\
+		2A-3B & = & C &\vline\\
+		\hline
+		\end{array}
+		$$
+		$$
+		\begin{array}{rcrr}
+		4A-B-3C & = & 0& \vline\\
+		2A-3B -C& = & 0 &\vline\\
+		\hline
+		\end{array}
+		$$
+		$$(1) - 2(2)$$
+		$$5B - C = 0 \ra 5B = C$$
+		Como hay 4 variables y teníamos 3 ecuaciones, debemos elegir el valor de una de ellas de manera arbitraria.
+		$$C = 5$$
+		$$\ra D = 5$$
+		$$\ra B = 1$$
+		$$4A -1 -15 = 0 \ra 4A=16 \ra A=4$$
+		Finalmente, el plano es
+		$$\Pi:4x + y + 5z = 5$$
+\end{solucion}
+\item Dado $P_1(0,2,-3)$ y $P_2(1,0,3)$, determinar la recta que pasa por $P_1$ y $P_2$.
+\begin{solucion}
+Buscamos un vector director
+		$$\vec{d} = P_2 - P_1 = (1, -2, 0)$$
+		Luego, la recta que pasa por $P_1$ y $P_2$ esta definida por
+		$$<x,y,z> = (0, 2, -3) + \lambda (1,-2,0)$$
+\end{solucion}
+\item Encontrar las ecuaciones de dos planos diferentes cuya intersección sea la recta que pasa por el punto $P_1(1,3,-2)$ y $P_2(2,0,4)$.
+\begin{solucion}
+Para realizar esto, basta con utilizar dos trios de puntos que contengan a los dos puntos dados y buscar dos planos. La intersección entre estos planos será la recta que pasa por ambos puntos. Para esto, definiremos puntos arbitrarios.\\
+		Diremos que
+		$$P_3(0, 0, 0), \quad P_4(1,0,0)$$
+		Partamos usando los puntos $P_1$, $P_2$ y $P_3$. Sabemos que la ecuación del plano es de la forma
+		$$Ax + By + Cz = D$$
+		Reemplazando con estos tres puntos, obtenemos el siguiente sistema
+		$$
+		\begin{array}{rcrr}
+		A + 3B - 2C & = & D& \vline\\
+		2A + 4C & = & D & \vline\\
+		0 & = & D &\vline\\
+		\hline
+		\end{array}
+		$$
+		$$
+		\begin{array}{rcrr}
+		A + 3B - 2C & = & 0& \vline\\
+		2A + 4C & = & 0 & \vline\\
+		\hline
+		\end{array}
+		$$
+		$$(2) + 2(1)$$
+		$$4A + 6B = 0 \ra A = -\dfrac{6B}{4} \ra A = -\dfrac{3B}{2}$$
+		Le pondremos un valor arbitrario a $B$,
+		$$B = 4$$
+		$$\ra A = -6$$
+		$$\ra -12 + 4C = 0 \ra C = 3$$
+		Por ende,
+		$$\Pi_1: -6x + 4y + 3z = 0$$
+		Ahora realizamos lo mismo con los puntos $P_1$, $P_2$, $P_4$. Sea la ecuación del plano
+		$$Ax + By + Cz = D$$
+		Reemplazando con estos tres puntos, obtenemos el siguiente sistema
+		$$
+		\begin{array}{rcrr}
+		A + 3B - 2C & = & D& \vline\\
+		2A + 4C & = & D & \vline\\
+		A & = & D &\vline\\
+		\hline
+		\end{array}
+		$$
+		$$
+		\begin{array}{rcrr}
+		3B - 2C & = & 0& \vline\\
+		A + 4C & = & 0 & \vline\\
+		\hline
+		\end{array}
+		$$
+		$$
+		\begin{array}{rcrr}
+		3B & = & 2C& \vline\\
+		A & = & -4C & \vline\\
+		\hline
+		\end{array}
+		$$
+		Le daremos un valor arbitrario a $C$
+		$$C = 3$$
+		$$ \ra B = 2$$
+		$$ \ra A = -12 $$
+		$$ \ra D = -12 $$
+		Con lo que obtenemos el plano
+		$$\Pi_2: -12x+2y+3z = -12$$
+		Finalmente, los planos buscados son:
+		$$\Pi_1: -6x + 4y + 3z = 0$$		
+		$$\Pi_2: -12x+2y+3z = -12$$
+\end{solucion}
+\item Encontrar un plano que sea perpendicular al plano cuya ecuación es $3x -7y +2z = 5$ y que pase por el punto $P(0,2,-1)$
+\begin{solucion}
+En primer lugar, debemos encontrar el vector normal del plano, que esta dado por los coeficientes de su ecuación, es decir
+		$$\vec{n} = \begin{pmatrix}
+		3\\-7\\2
+		\end{pmatrix}$$
+		Si los vectores normales de dos planos son perpendiculares entre si, los planos también lo serán, por lo que basta encontrar un vector perpendicular a $\vec{n}$ y utilizarlo como vector normal para nuestro nuevo plano. Para encontrar un vector perpendicular, realizaremos el producto cruz entre $\vec{n}$ y un vector arbitrario elegido por nosotros
+		$$\begin{pmatrix} 3 \\ -7 \\ 2 \end{pmatrix} \times \begin{pmatrix} 1 \\ 1 \\ 1 \end{pmatrix} = \begin{pmatrix} -9 \\ -1 \\ 10 \end{pmatrix}$$
+		Para encontrar el plano asociado, basta que utilicemos los coeficientes del vector como coeficientes de la ecuación del plano
+		$$-9x -y +10z = D$$
+		Por último, para encontrar $D$, reemplazamos el punto que nos dan en la ecuación del plano
+		$$-2 -10 = D \ra D = -12$$
+		Finalmente,
+		$$\Pi: -9x -y +10z = -12$$
+\end{solucion}
+\item Determinar la ecuación de un plano que pase por $P(4,2,1)$ y que sea paralelo al plano de ecuación $2x-5y+z=6$
+\begin{solucion}
+De forma análoga, para que dos planos sean paralelos, basta con que sus vectores normales sean paralelos. Dicho de otra forma, lo que va a cambiar será el parametro $D$. Es decir, nuestro plano es
+		$$2x - 5y + z = D$$
+		Reemplazando con el punto,
+		$$8-10+1 = D \ra D = -1$$
+		Luego, el plano buscado es
+		$$\Pi: 2x - 5y + z = -1$$
+\end{solucion}
+\item 
+\begin{enumerate}[a)]
+\item Sean $a=\left(\begin{array}{r}
+      1\\-1\\1
+    \end{array}\right)$ y $b=\left(\begin{array}{r}
+      0\\-1\\2
+    \end{array}\right)$, calcule el vector\textbf{ $b-proy_a b$ }y verifique que este es ortogonal a $a$.
+\item Demuestre que si $a$ y $b\in\R^3$ el vector $b-proy_a b$ es ortogonal a $a$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item La proyección de $b$ sobre $a$ corresponde a
+$$proy_{a}b = \dfrac{b \cdot a}{|a|^2}a =   \dfrac{\left(\begin{array}{r}
+	0\\-1\\2
+	\end{array}\right) \cdot\left(\begin{array}{r}
+		1\\-1\\1
+	\end{array}\right)}{\left(\begin{array}{r}
+		1\\-1\\1
+	\end{array}\right) \cdot \left(\begin{array}{r}
+		1\\-1\\1
+	\end{array}\right)}\left(\begin{array}{r}
+		1\\-1\\1
+	\end{array}\right) = \left(\begin{array}{r}
+1\\-1\\1
+\end{array}\right)$$
+Luego, 
+$$b-proy_a b = \left(\begin{array}{r}
+0\\-1\\2
+\end{array}\right) - \left(\begin{array}{r}
+1\\-1\\1
+\end{array}\right) = \left(\begin{array}{r}
+-1\\0\\1
+\end{array}\right)$$
+Podemos verificar que el resultado es perpendicular a $a$ utilizando el producto punto, esto es
+$$\left(\begin{array}{r}
+1\\-1\\1
+\end{array}\right) \cdot \left(\begin{array}{r}
+-1\\0\\1
+\end{array}\right) = 0$$
+\item Para demostrar esto, debemos demostrar que
+$$(b-proy_a b) \cdot a = 0 $$
+Desarrollando,
+$$\left(b-\dfrac{b \cdot a}{|a|^2}a\right) \cdot a = 0 $$
+$$b \cdot a -\dfrac{b \cdot a}{|a|^2}a \cdot a = 0 $$
+$$b \cdot a -\dfrac{b \cdot a}{|a|^2}|a|^2 = 0 $$
+$$b \cdot a -b \cdot a = 0 $$
+$$0 = 0$$
+$$\blacksquare$$
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
