--- a/2019/1/MAT1203/15/enunciado.tex
+++ b/2019/1/MAT1203/15/enunciado.tex
@@ -209,5 +209,91 @@
     \end{array}\right)$, calcule el vector\textbf{ $b-proy_a b$ }y verifique que este es ortogonal a $a$.
 \item Demuestre que si $a$ y $b\in\R^3$ el vector $b-proy_a b$ es ortogonal a $a$.
 \end{enumerate}
+\item Determinar si el siguiente sistema es consistente o no
+	$$
+	\begin{array}{rcr}
+	x_1 -6x_2& = & 5\\
+	x_2-4x_3+x_4& = & 0\\
+	-x_1+6x_2+x_3+5x_4& = & 3\\
+	-x_2+5x_3+4x_4 & = & 0
+	\end{array}
+	$$
+\item Lleve las siguientes matrices ampliadas a su forma escalonada reducida y determine la existencia y unicidad de las soluciones del sistema.
+\begin{tasks}(2)
+\task $
+		\begin{bmatrix}
+		1 & 2 & 4 & 8\\
+		2 & 4 & 6 & 8\\
+		3 & 6 & 9 & 12
+		\end{bmatrix}
+		$
+\task $
+		\begin{bmatrix}
+		1 & 2 & 4 & 5\\
+		2 & 4 & 5& 4\\
+		4 & 5 & 4 & 2
+		\end{bmatrix}
+		$
+\end{tasks}
+\item Sea la matriz $A=
+	\begin{bmatrix}
+	3 & 5 & -4\\
+	-3 & -2 & 4\\
+	6 & 1 & -8
+	\end{bmatrix}$
+\begin{enumerate}[a)]
+\item Determinar el conjunto solución de su sistema homogeneo.
+\item Describir todas las soluciones de $Ax=b$ con $b=
+		\begin{pmatrix}
+		7\\
+		-1\\
+		-4
+		\end{pmatrix}$ 
+\end{enumerate}
+\item Considere el siguiente sistema de ecuaciones, donde $a$ es una constante.
+  $$\begin{array}{llll}
+   x_1&+x_2&+x_3&=1 \\
+    x_1&+x_2&+ax_3&=1 \\
+     ax_1&+ax_2&+x_3&=a\\
+      x_1&-ax_2&+ax_3&=0  
+  \end{array}$$
+\begin{enumerate}[a)]
+\item Determine valores de $a$ para los cuales el sistema es inconsistente.
+\item Determine valores de $a$ para los cuales el sistema es consistente, y encuentre la solución.
+\end{enumerate}
+\item Sea la matriz $A=
+	\begin{bmatrix}
+	1 & 3 & 4\\
+	-4 & 2 & -6\\
+	-3 & -2 & -7
+	\end{bmatrix}
+	$ y $b$ un vector en $R^3$. ¿La ecuación $Ax=b$ es consistente para todo $b$?
+\item Sean los vectores 
+	$$
+	v_1 = \begin{pmatrix}
+	1\\
+	1\\
+	2
+	\end{pmatrix};\qquad
+	v_2 = \begin{pmatrix}
+	2\\
+	2\\
+	-3
+	\end{pmatrix}; \qquad
+	v_3 = \begin{pmatrix}
+	0\\
+	1\\
+	3
+	\end{pmatrix}$$
+	determinar si $Gen\{v_1, v_2, v_3\} = R^3$.
+\item Sean 
+$$v_1=\left(\begin{array}{r}
+  1\\0\\-2
+\end{array}\right), \quad v_2=\left(\begin{array}{r}
+  -2\\1\\7
+\end{array}\right) \quad y \quad v_3=\left(\begin{array}{r}
+  h\\0\\-2
+\end{array}\right)$$
+¿Para qué valor(es) de $h$ $Gen\{v_1, v_2, v_3\}=Gen\{v_1,v_2\}$ ?
 \end{preguntas}
 \end{document}
